fix : update the nav on smaller screens by using flex wrap .

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	font-size: 19px;
 	background-color: #8936b3;
+	flex-wrap: wrap;
 }
 .navbar {
 	display: flex;
